# srm-pitch

./: README.md
AB2/: CMakeLists.txt  package.xml  setup.py
AB2/src/AB2/: AlphaBot2.py  behaviour.py  rps.py  simon.py  test.py
avg_floats/: CMakeLists.txt  package.xml
avg_floats/launch/: avg_floats.launch
avg_floats/src/: avg_floats_client  avg_floats_server
avg_floats/srv/: AvgFloats.srv
avg_floats_topic/: CMakeLists.txt  package.xml
avg_floats_topic/scripts/: avg_floats_listener.py
buzzer/: CMakeLists.txt  package.xml
buzzer/launch/: buzzer.launch  buzzer_example.launch
buzzer/src/: buzzer_client.py  buzzer_example_client.py  buzzer_server.py
buzzer/srv/: Buzzer.srv
camera/: CMakeLists.txt  package.xml
camera/launch/: camera_autoadjust.launch  camera_color.launch  camera_create_data.launch  camera_distance.launch  camera_edge.launch  camera_object_recognition.launch  camera_pub_sub.launch  camera_pub_sub_adjusted.launch
camera/src/: camera_switch.py  color_selection.py  color_selection_server.py  color_selection_test.py  create_data.py  distance_finder.py  distance_finder_picture.py  distance_finder_v2.py  edge_detection.py  edge_v2.py  find_player.py  find_player_server.py  find_player_sw.py  find_player_view.py  find_player_visu.py  finger_counter.py  finger_counter_server.py  finger_counter_sw.py  finger_counter_v2.py  finger_counter_view.py  finger_counter_visu.py  hand_gestures.py  hand_recognition.py  image_autoadjust.py  mainGestures.py  object_detection.py  object_recognition.py  rock_paper_cisors.py  rock_paper_scisors.py  rock_paper_scissors.py  rock_paper_scissors_view.py  rock_paper_scissors_view_v2.py  test_for_services.py  webcam_pub.py  webcam_pub_autoadjust.py  webcam_sub.py  webcam_tout_con.py  wheel.py  wheel_server.py
camera/srv/: CameraSwitch.srv  ColorRecognitionService.srv  ColorSelectionService.srv  FindPlayerService.srv  FingerCounterService.srv  SwitchService.srv  WheelService.srv
games/: todo.txt
games/game1_rps/: CMakeLists.txt  package.xml
games/game1_rps/src/: main_rps.py
games/game2_wheel/: CMakeLists.txt  package.xml
games/game2_wheel/src/: main_wheel.py
games/game3_simon/: CMakeLists.txt  package.xml
init/: CMakeLists.txt  package.xml
init/launch/: pitch.launch
init/src/: init_main.py  wheel.py
ir_line_sensor/: CMakeLists.txt  package.xml
ir_line_sensor/launch/: ir_line_sensor.launch
ir_line_sensor/src/: ir_line_sensor_listener.py  ir_line_sensor_listener_example.py  ir_line_sensor_talker.py
ir_proximity_sensor/: CMakeLists.txt  package.xml
ir_proximity_sensor/src/: ir_top_listener.py
ir_remote/: CMakeLists.txt  package.xml
ir_remote/launch/: ir_remote.launch  remote.launch
ir_remote/scripts/: ir_listener.py  ir_remote_listener_example.py  ir_remote_talker.py  ir_talker.py
ir_top/: CMakeLists.txt  package.xml
ir_top/launch/: ir_top.launch
ir_top/src/: ir_top_listener.py  ir_top_talker.py
led/: CMakeLists.txt  package.xml
led/launch/: led.launch
led/src/: blink_led_client_test.py
led/srv/: BlinkLED.srv  blink_led_exe.py  blink_led_server.py  led_server.py  quarter_led_exe.py  static_led_exe.py  sudo.py
motor/: CMakeLists.txt  package.xml
motor/action/: Motor.action
motor/src/: motor_action_client_test.py  motor_action_server.py
pitch_init/: CMakeLists.txt  package.xml
pitch_init/src/: init_main.py  main_init.py
servo/: CMakeLists.txt  package.xml
servo/action/: Servo.action
servo/src/: servo_action_client.py  servo_action_server.py
talker_listener/: CMakeLists.txt  package.xml
talker_listener/launch/: talker_listener.launch
talker_listener/scripts/: listener.py  talker.py
test_rough/: CMakeLists.txt  package.xml
test_rough/src/: rough_client.py
