<?xml version="1.0"?>
<package format="2">
  <name>buzzer</name>
  <version>1.0.0</version>
  <description>The buzzer package</description>

   <!-- license -->
  <license>BSD</license>

  <!-- Website -->
  <url type="website">http://wiki.ros.org/Services</url>

  <!-- Author -->
  <maintainer email="Julien.Amadei@sigma-clermont.fr">Julien</maintainer>
  <author>Julien Amadei</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
