<?xml version="1.0"?>
<package format="2">
  <name>ir_proximity_sensor</name>
  <version>1.0.0</version>
  <description>ir_proximity_sensor package used to interact with an Alphabot2 robot's proximity sensors</description>

  <!-- license -->
  <license>BSD</license>

  <!-- Author -->
  <maintainer email="Julien.Amadei@sigma-clermont.fr">Julien</maintainer>
  <author>Julien Amadei</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
