<?xml version="1.0"?>
<package>
  <name>motor</name>
  <version>1.0.0</version>
  <description>motor package used to interact with an Alphabot2 robot's CC motors</description>
  
  <!-- license -->
  <license>BSD</license>

  <!-- Author -->
  <maintainer email="louis.guigon@sigma-clermont.fr" >Louis Guigon</maintainer>
  <author>Louis Guigon</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
