<?xml version="1.0"?>
<package>
  <name>motor</name>
  <version>0.0.1</version>
  <description>Servo_motion_package</description>
  <maintainer email="louis.guigon@sigma-clermont.fr" >Louis Guigon</maintainer>
  <license>TODO</license>

  <author>Louis Guigon</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
