<?xml version="1.0"?>
<package>
  <name>servo</name>
  <version>1.0.0</version>
  <description>servo package used to interact with an Alphabot2 robot's servomotors</description>
  
  <!-- license -->
  <license>BSD</license>

  <!-- Author -->
  <maintainer email="Julien.Amadei@sigma-clermont.fr">Julien</maintainer>
  <author>Julien Amadei</author>
  <maintainer email="louis.guigon@sigma-clermont.fr" >Louis Guigon</maintainer>
  <author>Louis Guigon</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
